--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -145,8 +145,8 @@ body { padding-top: 100px; }
  
 <h3>How to Enroll in DUO Security</h3>
 
-<h4>Before you begin</h4>
-<p><span class="glyphicon glyphicon-alert"></span> Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
+<h4>Before you begin<span class="glyphicon glyphicon-alert pull-right"></span></h4>
+<p>Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
 
 
 <div class="row">
@@ -159,11 +159,66 @@ body { padding-top: 100px; }
     </div>
       
   <div id="enroll-smartphone" class="panel-body" style="display:none">
-    <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
-    <ul>
-      <li>Smartphone using the mobile application for iOS or Android</li>
-      <li>Desk phone (landline) using the voice call method<br>    
-      <p><strong>NOTE:</strong> Use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p></li>
+    <p><strong>Install the Duo Mobile application</strong></p>
+    <ol>
+      <li>Use your mobile phone to find the "Duo Mobile" application in either iTunes or the Google Play.</li>
+      <li>Install and launch the "Duo Mobile" application.</li>
+    </ol>
+
+    <p><strong>Add your mobile phone to the Duo Security profile</strong></p>
+<ol>
+<li>With your laptop or desktop computer, browse to the&nbsp;<a href="https://webapps.case.edu/duo/webauth.py">Duo Security self-enrollment page</a>.</li>
+<li>Type in your CWRU network ID and password when prompted.</li>
+<li>Click the&nbsp;<strong>Start Setup</strong>&nbsp;button (Figure 1).</li>
+<li>Choose "Mobile phone" as device type. Click&nbsp;<strong>Continue</strong>.</li>
+<li>Choose country from the dropdown box ("United States" is default).</li>
+<li>Enter 10-digit telephone number (Figure 2).</li>
+<li>Check the box marked "<strong>(###) ###-####</strong>&nbsp;is the correct phone number" and click&nbsp;<strong>Continue</strong>.</li>
+<li>Choose phone operating system (iOS or Android). Click&nbsp;<strong>Continue</strong>.</li>
+<li>Select "I have Duo Mobile installed" and click&nbsp;<strong>Continue</strong>.</li>
+</ol>
+<p><strong><em><span style="text-decoration: underline;">Figure 1; Click the green "Start Setup" button to begin</span></em></strong></p>
+<p><span id="media-85658-0.43293107203411973" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=269242115" alt="" /></span></span>&zwnj;</p>
+<p><em><span style="text-decoration: underline;"><strong>Figure 2; 10 Digit telephone number is required to enroll any mobile phone or landline</strong></span>&nbsp;</em></p>
+<p><em><span id="media-85682-0.3897235947933446" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1557477938" alt="" /></span></span>&zwnj;</em></p>
+<p><em>&nbsp;</em></p>
+<h4 id="add-the-cwru-account-to-your-mobile-application">Add the CWRU account to your mobile application</h4>
+<blockquote>
+<p><strong>NOTE:</strong>&nbsp;Use a free-standing monitor or large laptop to complete these steps. Barcode scanning on a compact display is challenging.</p>
+</blockquote>
+<ol>
+<li>On your mobile phone, open the Duo Mobile application and tap the&nbsp;<strong>+</strong>&nbsp;or&nbsp;<strong>Add account</strong>&nbsp;button. Then tap&nbsp;<strong>Scan Barcode</strong>.</li>
+<li>Use your mobile phone to scan the barcode shown on your computer screen.</li>
+<li>After an account titled "Case Western Reserve University" appears on your mobile phone, click&nbsp;<strong>Continue</strong>&nbsp;on your computer.</li>
+</ol>
+<p><span style="text-decoration: underline;"><em><strong>Figure 3; Successful mobile enrollment- DUO Mobile application displays CWRU account details</strong></em></span></p>
+<p><em><span id="media-85655-0.2939263275376529" class="mceNonEditable"><span class="fig-img-"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1508560741" alt="" /></span></span>&zwnj;</em></p>
+<p><em>&nbsp;</em></p>
+<h4 id="add-a-descriptive-device-name">Add a descriptive device name</h4>
+<ol>
+<li>Click the gray&nbsp;<strong>Actions</strong>&nbsp;menu to the right of the newly added number (Figure 4).</li>
+<li>Choose "Change Device Name&hellip;" and add a descriptive title for the number (ex., "My Work Mobile").</li>
+<li>Click the green check mark to complete name change (Figure 5).</li>
+<li>Click&nbsp;<strong>Done</strong>&nbsp;to save all changes and exit the device management interface.</li>
+</ol>
+<p><span style="text-decoration: underline;"><em><strong>Figure 4; Add, remove, rename or reorder devices from the device management interface</strong></em></span></p>
+<p><em><span id="media-85683-0.36875542318400834" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1460169515" alt="" /></span></span>&zwnj;</em></p>
+<p><em><span style="text-decoration: underline;"><strong>Figure 5; Green banner indicates action completed and saved (e.g., device rename, default device set)</strong></span><br /></em></p>
+<p><em><span id="media-85689-0.6278608667909696" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1250087219" alt="" /></span></span>&zwnj;</em></p>
+<p><em>&nbsp;</em></p>
+<h4 id="sign-in-with-mobile-phone-to-complete-enrollment">Sign in with mobile phone to complete enrollment</h4>
+<ol>
+<li>Select your mobile phone from the dropdown box labelled "Device"</li>
+<li>Select the option for "Duo Push".</li>
+<li>Click the green&nbsp;<strong>Log in</strong>&nbsp;button (Figure 6).</li>
+<li>Open the Duo Mobile application on your mobile phone and tap the&nbsp;<strong>DUO PUSH</strong>&nbsp;button.</li>
+<li>Tap the&nbsp;<strong>Approve</strong>&nbsp;button (Figure 7).</li>
+<li>A webpage titled "Self-Enrollment Success" will appear on your laptop or desktop computer. You have successfully enrolled.</li>
+</ol>
+<p><span style="text-decoration: underline;"><em><strong>Figure 6; Choose mobile device (smartphone or tablet) to enable the Duo Push option</strong></em></span></p>
+<p><em><span id="media-85690-0.4368985761505416" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=445146458" alt="" /></span></span>&zwnj;</em></p>
+<p><em><em><em><span style="text-decoration: underline;"><strong>Figure 7; Tap the green button to approve a login request</strong></span>&nbsp;</em></em></em></p>
+<p><span id="media-85649-0.6052271519938914" class="mceNonEditable"><span class="fig-img-"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1967226875" alt="" /></span></span>&zwnj;</p>
     </ul>
   </div>
 </div>
@@ -234,69 +289,9 @@ body { padding-top: 100px; }
 
 
 
-<h4>Before you begin</h4>
-<p>Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
+
 <div class="se-section-delimiter">&nbsp;</div>
-<h4 id="install-the-duo-mobile-application">Install the Duo Mobile application</h4>
-<ol>
-<li>Use your mobile phone to find the "Duo Mobile" application in either iTunes or the Google Play.</li>
-<li>Install and launch the "Duo Mobile" application.</li>
-</ol>
-<div class="se-section-delimiter">&nbsp;</div>
-<h4 id="add-your-mobile-phone-to-the-duo-security-profile">Add your mobile phone to the Duo Security profile</h4>
-<ol>
-<li>With your laptop or desktop computer, browse to the&nbsp;<a href="https://webapps.case.edu/duo/webauth.py">Duo Security self-enrollment page</a>.</li>
-<li>Type in your CWRU network ID and password when prompted.</li>
-<li>Click the&nbsp;<strong>Start Setup</strong>&nbsp;button (Figure 1).</li>
-<li>Choose "Mobile phone" as device type. Click&nbsp;<strong>Continue</strong>.</li>
-<li>Choose country from the dropdown box ("United States" is default).</li>
-<li>Enter 10-digit telephone number (Figure 2).</li>
-<li>Check the box marked "<strong>(###) ###-####</strong>&nbsp;is the correct phone number" and click&nbsp;<strong>Continue</strong>.</li>
-<li>Choose phone operating system (iOS or Android). Click&nbsp;<strong>Continue</strong>.</li>
-<li>Select "I have Duo Mobile installed" and click&nbsp;<strong>Continue</strong>.</li>
-</ol>
-<p><strong><em><span style="text-decoration: underline;">Figure 1; Click the green "Start Setup" button to begin</span></em></strong></p>
-<p><span id="media-85658-0.43293107203411973" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=269242115" alt="" /></span></span>&zwnj;</p>
-<p><em><span style="text-decoration: underline;"><strong>Figure 2; 10 Digit telephone number is required to enroll any mobile phone or landline</strong></span>&nbsp;</em></p>
-<p><em><span id="media-85682-0.3897235947933446" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1557477938" alt="" /></span></span>&zwnj;</em></p>
-<p><em>&nbsp;</em></p>
-<h4 id="add-the-cwru-account-to-your-mobile-application">Add the CWRU account to your mobile application</h4>
-<blockquote>
-<p><strong>NOTE:</strong>&nbsp;Use a free-standing monitor or large laptop to complete these steps. Barcode scanning on a compact display is challenging.</p>
-</blockquote>
-<ol>
-<li>On your mobile phone, open the Duo Mobile application and tap the&nbsp;<strong>+</strong>&nbsp;or&nbsp;<strong>Add account</strong>&nbsp;button. Then tap&nbsp;<strong>Scan Barcode</strong>.</li>
-<li>Use your mobile phone to scan the barcode shown on your computer screen.</li>
-<li>After an account titled "Case Western Reserve University" appears on your mobile phone, click&nbsp;<strong>Continue</strong>&nbsp;on your computer.</li>
-</ol>
-<p><span style="text-decoration: underline;"><em><strong>Figure 3; Successful mobile enrollment- DUO Mobile application displays CWRU account details</strong></em></span></p>
-<p><em><span id="media-85655-0.2939263275376529" class="mceNonEditable"><span class="fig-img-"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1508560741" alt="" /></span></span>&zwnj;</em></p>
-<p><em>&nbsp;</em></p>
-<h4 id="add-a-descriptive-device-name">Add a descriptive device name</h4>
-<ol>
-<li>Click the gray&nbsp;<strong>Actions</strong>&nbsp;menu to the right of the newly added number (Figure 4).</li>
-<li>Choose "Change Device Name&hellip;" and add a descriptive title for the number (ex., "My Work Mobile").</li>
-<li>Click the green check mark to complete name change (Figure 5).</li>
-<li>Click&nbsp;<strong>Done</strong>&nbsp;to save all changes and exit the device management interface.</li>
-</ol>
-<p><span style="text-decoration: underline;"><em><strong>Figure 4; Add, remove, rename or reorder devices from the device management interface</strong></em></span></p>
-<p><em><span id="media-85683-0.36875542318400834" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1460169515" alt="" /></span></span>&zwnj;</em></p>
-<p><em><span style="text-decoration: underline;"><strong>Figure 5; Green banner indicates action completed and saved (e.g., device rename, default device set)</strong></span><br /></em></p>
-<p><em><span id="media-85689-0.6278608667909696" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1250087219" alt="" /></span></span>&zwnj;</em></p>
-<p><em>&nbsp;</em></p>
-<h4 id="sign-in-with-mobile-phone-to-complete-enrollment">Sign in with mobile phone to complete enrollment</h4>
-<ol>
-<li>Select your mobile phone from the dropdown box labelled "Device"</li>
-<li>Select the option for "Duo Push".</li>
-<li>Click the green&nbsp;<strong>Log in</strong>&nbsp;button (Figure 6).</li>
-<li>Open the Duo Mobile application on your mobile phone and tap the&nbsp;<strong>DUO PUSH</strong>&nbsp;button.</li>
-<li>Tap the&nbsp;<strong>Approve</strong>&nbsp;button (Figure 7).</li>
-<li>A webpage titled "Self-Enrollment Success" will appear on your laptop or desktop computer. You have successfully enrolled.</li>
-</ol>
-<p><span style="text-decoration: underline;"><em><strong>Figure 6; Choose mobile device (smartphone or tablet) to enable the Duo Push option</strong></em></span></p>
-<p><em><span id="media-85690-0.4368985761505416" class="mceNonEditable" title="{attributes: {   &quot;alt&quot;: &quot;&quot;,   &quot;caption&quot;: &quot;&quot;,   &quot;cp-enable&quot;: &quot;false&quot;,   &quot;float&quot;: &quot;&quot;,   &quot;margin&quot;: &quot;&quot;,   &quot;widthpercentage&quot;: &quot;100&quot; }}"><span class="fig-img-" style="width: 100%;"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=445146458" alt="" /></span></span>&zwnj;</em></p>
-<p><em><em><em><span style="text-decoration: underline;"><strong>Figure 7; Tap the green button to approve a login request</strong></span>&nbsp;</em></em></em></p>
-<p><span id="media-85649-0.6052271519938914" class="mceNonEditable"><span class="fig-img-"><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1967226875" alt="" /></span></span>&zwnj;</p>
+
 
 
 ‌<!-- Content piece, "How to enroll a landline" -->
